src/test/deca/context/valid/null.deca
// Description :
// test de l'expression null
//
// Résultats :
// ok

{
  null;
}
